# basketball_project

./: .cursorrules  .gitignore  BasketballGM.spec  README.md  cli_input_ux_check_01.txt  d1_cellb_no_resync.txt  d1_cellb_resync.txt  d1_cellb_resync_1180.txt  d1_observer.txt  d1_observer_1150.txt  d1_observer_base.txt  d1_observer_basebonus.txt  d1_observer_bonus.txt  d1_observer_capbase.txt  d1_observer_cellb.txt  d1_observer_payrollbefore.txt  d1_observer_postfloor.txt  d1_observer_prelepop.txt  d1_observer_pushback_compare.txt  d1_observer_pushback_flag.txt  d1_observer_roomtosoft.txt  d1_observer_softcap_gate.txt  d1_observer_softcap_value.txt  d2_cellb_no_resync.txt  d2_cellb_resync.txt  d2_cellb_resync_1180.txt  d2_observer_after_floor.txt  d2_observer_base.txt  d2_observer_basebonus.txt  d2_observer_bonus.txt  d2_observer_capbase.txt  d2_observer_cellb.txt  d2_observer_payrollbefore.txt  d2_observer_postfloor.txt  d2_observer_prelepop.txt  d2_observer_pushback_compare.txt  d2_observer_pushback_flag.txt  d2_observer_roomtosoft.txt  d2_observer_salary.txt  d2_observer_softcap_gate.txt  (+10 more)
basketball_sim/: __main__.py  main.py
docs/: AI_WORKFLOW_RULES.md  AUTO_ROLE_TAG_PARAMS.md  CHATGPT_HANDOVER_FULL_2026-04.md  CHATGPT_NEW_CHAT_HANDOFF_FOR_CURSOR_SYNC.md  CURRENT_STATE_ANALYSIS_MASTER.md  CURSOR_CHAT_HANDOFF_LATEST_2026-04.md  CURSOR_HANDOFF_TO_NEW_CHAT_2026-05-08.md  DESIGN_BACKLOG_UX.md  DRAFT_AUCTION_SYSTEM.md  ECONOMY_DESIGN_NOTES.md  ECONOMY_MONEY_FLOW_AUDIT.md  ECONOMY_NON_LEDGER_MONEY_POLICY.md  FA_BASE_BONUS_BUILD_CODE_PATH_NOTE_2026-04.md  (+177 more)
godot/: .gitignore  (+2 more)
(+575 files in other folders)
